# kalpana

./: .gitignore  MANIFEST.in  Makefile  README.md  README.rst  Zen.md  chaptersidebar.py  common.py  configlib.py  default_settings.yaml  defaultcfg.json  defaultconfig.json  defaultstyle.json  exportchapter.py  fontdialog.py  imports.py  kalpana.py  kalpana.py3  kalpana_bootstrap.py3  linewidget.py  loadorderdialog.py  mainwindow.py  nano-log-fix.py  nano.py  old_nano_methods.py  overview.py  planning.txt  plugin.py  plugin_docs.rst  pluginlib.py  pluginmanager.py  qtstylesheet.css  run_mypy.sh  settingsmanager.py  setup.cfg  setup.py  template.css  terminal.py  test_chaptersidebar.py  test_settingsmanager.py  (+2 more)
docs/: Zen.md  plugin_docs.rst  plugins.md
kalpana/: autocompletion.py  chapteroverview.py  chapters.py  common.py  controller.py  filehandler.py  highlighter.py  kalpana.py  mainwindow.py  settings.py  spellcheck.py  terminal.py  textarea.py  vimmode.py
kalpana/data/: default_settings.yaml  qt.css
templates/: entry_template.html  index_page.css  section_template.html  tags_template.html
themes/: default.css
theming/: qt.css  stylesheet.css
