[metadata]
name = kalpana
version = attr: kalpana.__version__
description = 'A clean and very minimalistic word processor'
url = 'https://github.com/kalpana-org/kalpana'
author = 'nycz'

[options]
include_package_data = True
python_requires = >= 3.8
packages = kalpana
install_requires =
    PyQt5
    libsyntyche >= 2.0.0
    PyYAML
    pyenchant

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pytest
    pytest-cov
    vulture

[options.entry_points]
gui_scripts =
    kalpana = kalpana.kalpana:main


# == Tools ==

[flake8]
max-line-length = 100

[mypy]
python_version = 3.8
warn_unreachable = True
